Add Item and Price models
Introduced new data structures: `ItemsGetQueryParams`, `Condition`, `ItemPriceResponse`, `ItemRequest`, `ItemResponse`, and `Price`. These structures include implementations for serialization and deserialization to fit query parameter styles as described in Swagger documentation. Updated the README to reflect the latest build date.
