# openapi.yaml
@@ -5,6 +5,59 @@ info:
   version: 0.1.0
 
 paths:
+  /items:
+    get:
+      tags:
+        - items
+      parameters:
+        - in: query
+          name: search
+          schema:
+            type: string
+        - in: query
+          name: part.type
+          schema:
+            $ref: "#/components/schemas/PartType"
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ItemResponse"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+    post:
+      tags:
+        - items
+      security:
+        - OAuth2: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ItemRequest"
+        required: true
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ItemResponse"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
   /parts:
     get:
       tags:
@@ -53,6 +106,8 @@ paths:
                 $ref: "#/components/schemas/UserResponse"
         "400":
           $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
         "409":
           $ref: "#/components/responses/Conflict"
         "500":
@@ -114,6 +169,8 @@ components:
         application/problem+json:
           schema:
             $ref: "#/components/schemas/Problem"
+    Unauthorized:
+      description: Unauthorized
 
   schemas:
     Problem:
@@ -129,12 +186,30 @@ components:
           type: string
         instance:
           type: string
-
       required:
         - type
         - title
         - status
         - detail
+
+    Price:
+      type: object
+      properties:
+        value:
+          type: number
+        currency:
+          type: string
+      required:
+        - amount
+        - currency
+
+    Condition:
+      type: string
+      enum:
+        - New
+        - Used
+        - Refurbished
+        - ForParts
 
     UserResponse:
       type: object
@@ -232,3 +307,71 @@ components:
         - type
         - name
         - attributes
+
+    ItemResponse:
+      type: object
+      properties:
+        id:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        user:
+          $ref: "#/components/schemas/UserResponse"
+        part:
+          $ref: "#/components/schemas/PartResponse"
+        defaultPrice:
+          $ref: "#/components/schemas/ItemPriceResponse"
+        condition:
+          $ref: "#/components/schemas/Condition"
+        description:
+          type: string
+      required:
+        - id
+        - createdAt
+        - updatedAt
+        - user
+        - part
+        - defaultPrice
+        - condition
+
+    ItemRequest:
+      type: object
+      properties:
+        partId:
+          type: string
+        defaultPrice:
+          type: number
+        condition:
+          $ref: "#/components/schemas/Condition"
+        description:
+          type: string
+      required:
+        - partId
+        - defaultPrice
+        - condition
+
+    ItemPriceResponse:
+      type: object
+      properties:
+        id:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        value:
+          type: number
+        currency:
+          type: string
+      required:
+        - id
+        - createdAt
+        - updatedAt
+        - value
+        - currency
